--- a/Day1-DrumKit/index-START.html
+++ b/Day1-DrumKit/index-START.html
@@ -73,9 +73,12 @@
     document.onkeydown = function (e) {
       var soundId = sounds[e.keyCode];
       if (soundId) {
-        document.getElementById(soundId).play();
+        const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
         const animation = document.querySelector(`div[data-key="${e.keyCode}"]`);
         animation.classList.add("playing");
+        if (!audio) return;
+        audio.currentTime = 0;
+        audio.play();
         setTimeout(function () {
           animation.classList.remove("playing");
         }, 50);
